POCOR-1855 - Fixed the misalignment of the radio button on survey>Form>Questions>Dropdown FieldType

--- a/plugins/OpenEmis/webroot/css/themes/core/layout.overwrites.css
+++ b/plugins/OpenEmis/webroot/css/themes/core/layout.overwrites.css
@@ -1,4 +1,4 @@
-/* 
+/*
 Core Overwrites: v.1.0.8
 */
 
@@ -564,3 +564,14 @@ a,
 }
 
 /* End of Enable Search for Chosen Select */
+
+
+/* Temporary fix for POCOR-1855 */
+
+.form-horizontal input[type="checkbox"],
+.form-horizontal input[type="radio"] {
+    width: 18px !important;
+    min-width: 18px !important;
+}
+
+/* End of Temporary fix for POCOR-1855 */
